first pass to the end (almost)

--- a/AngularJS/index.html
+++ b/AngularJS/index.html
@@ -241,7 +241,7 @@
                         </ul>         
                     </aside>
                 </section>
-                <!--                                <section>
+                                                <section>
                                                     <h4>Key Features</h4>
                                                    
                                                     <p>Few of Angular's characteristics</p> 
@@ -268,7 +268,7 @@
                 <aside class="notes">
                     We'll talk about these features in the next slide
                 </aside>
-                                                </section>-->
+                                                </section>
                 </section>
 
                 <section>
